--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
     </div>
 </div>
 
+<div align="center">John S. Stritzinger</div>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+
 </body>
 </html>
 
