--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
-
+<div align="center"><h3>Web Applications</h3></div>
+<div align="center"><h3>Computer Science 242</h3></div>
+<div align="center"><h3>University of South Carolina</h3></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 
