--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
+            <a href="index.html">Home</a>
             <a href="page1.html">AboutMe</a>
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
