--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     .right-links a:hover {
         text-decoration: underline;
     }
+
+    .container
+    {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+    height: 800px;
+    background-color: lightgrey;
+    }
 </style>
 </head>
 <body>
@@ -91,12 +100,13 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
+<div class="container">    
 <div align="center"><h3>Web Applications</h3></div>
 <div align="center"><h3>Computer Science 242</h3></div>
 <div align="center"><h3>University of South Carolina</h3></div>
-<div align="center">John S. Stritzinger</div>
-<div align="center">Graduate Assistant - University of South Carolina</div>
-
+<div align="center"><h4>John S. Stritzinger</h4></div>
+<div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
+</div>
 </body>
 </html>
 
