--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
     </div>
 </div>
 <div class="container">    
-<div align="center"><h3>Web Applications</h3></div>
-<div align="center"><h3>Computer Science 242</h3></div>
 <div align="center"><h3>University of South Carolina</h3></div>
+<div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
 <div align="center"><h4>John S. Stritzinger</h4></div>
 <div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
 </div>
