--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>USC242 HomePage</title>
+<title>USC242 HomePage - About Me</title>
 <style>
     body {
         margin: 0;
@@ -100,3 +100,4 @@
 </body>
 
 </html>
+
