--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>USC242 HomePage</title>
+<title>USC242 HomePage - USC Activities</title>
 <style>
     body {
         margin: 0;
