--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
     height: 800px;
     background-color: lightgrey;
     }
+
+    .footer
+    {
+    height: 50px;
+    background-color: black;
+    color: white;
+    }
 </style>
 </head>
 <body>
