--- a/index.html
+++ b/index.html
@@ -114,5 +114,6 @@
 <div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
 </div>
 </body>
+<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
 
