--- a/page1.html
+++ b/page1.html
@@ -98,6 +98,7 @@
 <div align="center">Columbia, South Carolina 29201</div>
 
 </body>
-
+<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
