--- a/page1.html
+++ b/page1.html
@@ -71,6 +71,15 @@
     .right-links a:hover {
         text-decoration: underline;
     }
+    
+    .container
+    {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+    height: 800px;
+    background-color: lightgrey;
+    }
 </style>
 </head>
 <body>
@@ -91,14 +100,15 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
-
+<div class="container">
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div>
-
+</div>
 </body>
 <footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
