--- a/page1.html
+++ b/page1.html
@@ -79,6 +79,7 @@
     margin: 0 auto;
     height: 800px;
     background-color: lightgrey;
+    text-align: center;
     }
 </style>
 </head>
@@ -107,8 +108,9 @@
 <div align="center">Columbia, South Carolina 29201</div>
 </div>
 </body>
-<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
+<footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
