--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
     {
     position: relative;
     width: 1200px;
+    margin-top: 30px;
     margin: 0 auto;
-    height: 800px;
+    height: 600px;
+    margin-bottom: 30px;
     background-color: lightgrey;
     }
 
@@ -86,6 +88,7 @@
     height: 50px;
     background-color: black;
     color: white;
+    text-align: center;
     }
 </style>
 </head>
