--- a/page1.html
+++ b/page1.html
@@ -72,13 +72,22 @@
         text-decoration: underline;
     }
     
-    .container
+      .container
     {
     position: relative;
     width: 1200px;
+    margin-top: 30px;
     margin: 0 auto;
-    height: 800px;
+    height: 600px;
+    margin-bottom: 30px;
     background-color: lightgrey;
+    }
+
+    .footer
+    {
+    height: 50px;
+    background-color: black;
+    color: white;
     text-align: center;
     }
 </style>
@@ -110,6 +119,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
