--- a/page2.html
+++ b/page2.html
@@ -72,13 +72,23 @@
         text-decoration: underline;
     }
 
-    .container
+  .container
     {
     position: relative;
     width: 1200px;
+    margin-top: 30px;
     margin: 0 auto;
-    height: 800px;
+    height: 600px;
+    margin-bottom: 30px;
     background-color: lightgrey;
+    }
+
+    .footer
+    {
+    height: 50px;
+    background-color: black;
+    color: white;
+    text-align: center;
     }
 </style>
 </head>
@@ -107,5 +117,5 @@
 <div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
 </div>
 </body>
-<footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
+<footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
