--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage - About Me</title>
 <style>
     body {
@@ -119,6 +120,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
