--- a/page3.html
+++ b/page3.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage - USC Activities</title>
 <style>
     body {
