--- a/page3.html
+++ b/page3.html
@@ -90,6 +90,8 @@
     background-color: black;
     color: white;
     text-align: center;
+    position: absolut;
+    bottom: 55px;
     }
 </style>
 </head>
