--- a/page3.html
+++ b/page3.html
@@ -90,7 +90,7 @@
     background-color: black;
     color: white;
     text-align: center;
-    position: absolut;
+    position: absolute;
     bottom: 55px;
     }
 </style>
