--- a/page3.html
+++ b/page3.html
@@ -114,6 +114,7 @@
     </div>
 </div>
 <div class="container">    
+<div align="center"><H1>Life at USC</H1></div>
 <div align="center"><h3>University of South Carolina</h3></div>
 <div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
 <div align="center"><h4>John S. Stritzinger</h4></div>
