--- a/page2.html
+++ b/page2.html
@@ -111,7 +111,8 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
-<div class="container">    
+<div class="container">
+<div align="center"><H1>My Interests</H1></div>
 <div align="center"><h3>University of South Carolina</h3></div>
 <div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
 <div align="center"><h4>John S. Stritzinger</h4></div>
