--- a/page1.html
+++ b/page1.html
@@ -112,6 +112,7 @@
     </div>
 </div>
 <div class="container">
+<div align="center"><H1>AboutMe</H1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
@@ -120,6 +121,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
