--- a/page2.html
+++ b/page2.html
@@ -90,6 +90,9 @@
     background-color: black;
     color: white;
     text-align: center;
+    position: absolute;
+    bottom: 55px;
+    width: 100%;    
     }
 </style>
 </head>
