--- a/page1.html
+++ b/page1.html
@@ -90,6 +90,9 @@
     background-color: black;
     color: white;
     text-align: center;
+    position: absolute;
+    bottom: 55px;
+    width: 100%;
     }
 </style>
 </head>
@@ -121,6 +124,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
