--- a/page1.html
+++ b/page1.html
@@ -120,10 +120,12 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div>
+<div><img src="image1.png"><img src="image2.png"></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
