--- a/page2.html
+++ b/page2.html
@@ -116,10 +116,11 @@
 </div>
 <div class="container">
 <div align="center"><H1>My Interests</H1></div>
-<div align="center"><h3>University of South Carolina</h3></div>
-<div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
-<div align="center"><h4>John S. Stritzinger</h4></div>
-<div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
+<div align="center">University of South Carolina<</div>
+<div align="center">Computer Science 242 - Web Applications</div>
+<div align="center">John S. Stritzinger</div>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+<div><img src="image4.png" width=300px height=300px><img src="image5.png" width=300px height=300px></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
