--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
     </div>
 </div>
 <div class="container">    
-<div align="center"><h3>University of South Carolina</h3></div>
-<div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
-<div align="center"><h4>John S. Stritzinger</h4></div>
-<div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
+<div align="center"><h1>Home Page</h1></div>
+<div align="center">University of South Carolina</div>
+<div align="center">Computer Science 242 - Web Applications</div>
+<div align="center">John S. Stritzinger</div>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+<div align="center"><span align=center><img src="image1.png" width="400px" height="400px"></span></div>
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
