--- a/page3.html
+++ b/page3.html
@@ -119,6 +119,7 @@
 <div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
 <div align="center"><h4>John S. Stritzinger</h4></div>
 <div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
+<div align="center"><span><img src="image6.png" width="300px" height="300px"><img src="image7.png" width="300px" height="300px"></span></div>
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
