--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     width: 1200px;
     margin-top: 30px;
     margin: 0 auto;
-    height: 600px;
+    height: 85%;
     margin-bottom: 30px;
     background-color: lightgrey;
     }
@@ -119,8 +119,8 @@
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
-<div align="center">Graduate Assistant - University of South Carolina</div>
-<div align="center"><span align=center><img src="image1.png" width="400px" height="400px"></span></div>
+<div align="center">Graduate Assistant - University of South Carolina</div><BR><BR>
+<div align="center"><span align=center><img src="image1.png" width="500px" height="500px"></span></div>
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
