--- a/page3.html
+++ b/page3.html
@@ -79,7 +79,7 @@
     width: 1200px;
     margin-top: 30px;
     margin: 0 auto;
-    height: 600px;
+    height: 85%;
     margin-bottom: 30px;
     background-color: lightgrey;
     }
@@ -91,7 +91,7 @@
     color: white;
     text-align: center;
     position: absolute;
-    bottom: 55px;
+    bottom: 5px;
     }
 </style>
 </head>
