--- a/page3.html
+++ b/page3.html
@@ -118,7 +118,7 @@
 <div align="center"><h3>University of South Carolina</h3></div>
 <div align="center"><h3>Computer Science 242 - Web Applications</h3></div>
 <div align="center"><h4>John S. Stritzinger</h4></div>
-<div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div>
+<div align="center"><h4>Graduate Assistant - University of South Carolina</h4></div><BR><BR>
 <div align="center"><span><img src="image6.png" width="300px" height="300px"><img src="image7.png" width="300px" height="300px"></span></div>
 </div>
 </body>
