--- a/page1.html
+++ b/page1.html
@@ -119,12 +119,13 @@
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
-<div align="center">Columbia, South Carolina 29201</div>
-<div><img src="image2.png" width=300px height=300px><img src="image3.png" width=300px height=300px></div>        
+<div align="center">Columbia, South Carolina 29201</div><BR><BR>
+<div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>        
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
