--- a/page1.html
+++ b/page1.html
@@ -76,10 +76,10 @@
       .container
     {
     position: relative;
-    width: 1200px;
+    width: 85%;
     margin-top: 30px;
     margin: 0 auto;
-    height: 600px;
+    height: 85%;
     margin-bottom: 30px;
     background-color: lightgrey;
     }
@@ -125,6 +125,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
