--- a/page2.html
+++ b/page2.html
@@ -73,13 +73,13 @@
         text-decoration: underline;
     }
 
-  .container
+     .container
     {
     position: relative;
-    width: 1200px;
+    width: 85%;
     margin-top: 30px;
     margin: 0 auto;
-    height: 600px;
+    height: 85%;
     margin-bottom: 30px;
     background-color: lightgrey;
     }
