--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         text-decoration: underline;
     }
 
-    .container
+         .container
     {
     position: relative;
-    width: 1200px;
+    width: 85%;
     margin-top: 30px;
     margin: 0 auto;
     height: 85%;
