--- a/page3.html
+++ b/page3.html
@@ -73,7 +73,7 @@
         text-decoration: underline;
     }
 
-       .container
+    .container
     {
     position: relative;
     width: 85%;
@@ -92,6 +92,11 @@
     text-align: center;
     position: absolute;
     bottom: 5px;
+    }
+
+    img
+    {
+    padding: 30px;
     }
 </style>
 </head>
@@ -119,7 +124,7 @@
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div><BR><BR>
-<div align="center"><span><img src="image6.png" width="300px" height="300px"><img src="image7.png" width="300px" height="300px"></span></div>
+<div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
