--- a/page2.html
+++ b/page2.html
@@ -94,6 +94,11 @@
     bottom: 5px;
     width: 100%;    
     }
+
+    img
+    {
+    padding: 30px;
+    }
 </style>
 </head>
 <body>
@@ -120,7 +125,7 @@
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
-<div><img src="image4.png" width=300px height=300px><img src="image5.png" width=300px height=300px></div>    
+<div><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
