--- a/page1.html
+++ b/page1.html
@@ -94,6 +94,11 @@
     bottom: 5px;
     width: 100%;
     }
+
+    img
+    {
+    padding: 30px;
+    }
 </style>
 </head>
 <body>
@@ -125,6 +130,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
