--- a/page2.html
+++ b/page2.html
@@ -125,7 +125,7 @@
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
-<div><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></div>    
+<div align="center"><span align="center"><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></span></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
