--- a/page2.html
+++ b/page2.html
@@ -121,7 +121,7 @@
 </div>
 <div class="container">
 <div align="center"><H1>My Interests</H1></div>
-<div align="center">University of South Carolina<</div>
+<div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
