--- a/page2.html
+++ b/page2.html
@@ -121,10 +121,10 @@
 </div>
 <div class="container">
 <div align="center"><H1>My Interests</H1></div>
-<div align="center">University of South Carolina</div>
-<div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
+<div align="center">1800 Washington Street</div>
+<div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div align="center"><span align="center"><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></span></div>    
 </div>
 </body>
