--- a/page3.html
+++ b/page3.html
@@ -120,10 +120,10 @@
 </div>
 <div class="container">    
 <div align="center"><H1>Life at USC</H1></div>
-<div align="center">University of South Carolina</div>
-<div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
-<div align="center">Graduate Assistant - University of South Carolina</div><BR><BR>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+<div align="center">1800 Washington Street</div>
+<div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
 </div>
 </body>
