--- a/page2.html
+++ b/page2.html
@@ -126,7 +126,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><span align="center"><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></span></div>    
+<div align="center"><span><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></span></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
