--- a/examples/01-html/index.html
+++ b/examples/01-html/index.html
@@ -1,1 +1,28 @@
-Johns Test
+<html>
+    <head><title>Squirrels</title>
+    <style>
+        footer
+        {
+            position: absolute;
+            bottom: 2px;
+            height: 50px;
+            background-color: black;
+            color: white;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
+    </head>
+    <body>
+        <div align="center"><img src="./images/squirrels.jpg" alt="squirrels" width="300px" height="300px"></div>
+        <H1>How to Raise Squirrels</H1>
+        <H2>By John S. Stritzinger</H2>
+        <p>Make Sure they sleep alot. Peanuts are well loved.</p>
+        <ol>
+            <li>Never Used this tag...</li>
+            <li>Pedialite for Squirrels</li>
+        </ol>
+
+    </body>
+    <footer>&copy2026 Cocky Consulting Inc.</footer>
+</html>
