--- a/page2.html
+++ b/page2.html
@@ -112,6 +112,7 @@
             <a href="page1.html">AboutMe</a>
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
+            <a href="./project/portfoliopage.html">Portfolio</a>
         </div>
     </div>
 
