--- a/project/portfoliopage.html
+++ b/project/portfoliopage.html
@@ -5,7 +5,12 @@
 
 </head>    
 <body>
-
+    <h1>CSCE 252</h1>
+    <h2>John Stritzinger</h2>
+    <h3>Assisgnments</h3>
+    <ul>
+        <li><a href="../assignments/01-basic-html/index.html"</li>
+    </ul>
     </body>
     <footer>&copy2026 Cocky Consulting, Inc</footer>
 </html>
