--- a/project/portfoliopage.html
+++ b/project/portfoliopage.html
@@ -12,5 +12,5 @@
         <li><a href="../assignments/01-basic-html/index.html"</li>
     </ul>
     </body>
-    <footer>&copy2026 Cocky Consulting, Inc</footer>
+    <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
 </html>
