--- a/project/portfoliopage.html
+++ b/project/portfoliopage.html
@@ -5,12 +5,31 @@
 
 </head>    
 <body>
+    <div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="page1.html">AboutMe</a>
+            <a href="page2.html">MyInterests</a>
+            <a href="page3.html">USC</a>
+            <a href="./project/portfoliopage.html">Portfolio</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+<div class="container">
     <h1>CSCE 252</h1>
     <h2>John Stritzinger</h2>
     <h3>Assisgnments</h3>
     <ul>
         <li><a href="../assignments/01-basic-html/index.html"</li>
     </ul>
+</div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
 </html>
