--- a/project/portfoliopage.html
+++ b/project/portfoliopage.html
@@ -23,9 +23,9 @@
     </div>
 </div>
 <div class="container">
+    <h1>Portfolio</h1>
     <h1>CSCE 252</h1>
     <h2>John Stritzinger</h2>
-    <h3>Assisgnments</h3>
     <ul>
         <li><a href="../assignments/01-basic-html/index.html"</li>
     </ul>
