--- a/project/portfoliopage.html
+++ b/project/portfoliopage.html
@@ -22,13 +22,15 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
-<div class="container">
-    <h1>Portfolio</h1>
-    <h1>CSCE 252</h1>
-    <h2>John Stritzinger</h2>
+<div align="center"><H1>Portfolio</H1></div>
+<div align="center">John S. Stritzinger</div>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+<div align="center">1800 Washington Street</div>
+<div align="center">Columbia, South Carolina 29201</div><BR><BR>
     <ul>
         <li><a href="../assignments/01-basic-html/index.html"</li>
     </ul>
+<div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>
 </div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
