--- a/page3.html
+++ b/page3.html
@@ -110,7 +110,7 @@
             <a href="page1.html">AboutMe</a>
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
-            <a href="./project/portfoliopage.html">Portfolio</a>
+            <a href="portfoliopage.html">Portfolio</a>
         </div>
     </div>
 
