--- a/page1.html
+++ b/page1.html
@@ -111,7 +111,7 @@
             <a href="page1.html">AboutMe</a>
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
-            <a href="./project/portfoliopage.html">Portfolio</a>
+            <a href="portfoliopage.html">Portfolio</a>
         </div>
     </div>
 
@@ -131,6 +131,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
