--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -22,13 +22,14 @@
         <a href="logout.html">Logout</a>
     </div>
 </div>
+<div class="container">
 <div align="center"><H1>Portfolio</H1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
     <ul>
-        <li><a href="../assignments/01-basic-html/index.html"</li>
+        <li><a href="../assignments/01-basic-html/index.html">Assignment1</li>
     </ul>
 <div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>
 </div>
