--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
             <a href="portfoliopage.html">Portfolio</a>
+            <a href="vitae.html">Vitae</a>
         </div>
     </div>
 
