--- a/page1.html
+++ b/page1.html
@@ -112,6 +112,7 @@
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
             <a href="portfoliopage.html">Portfolio</a>
+            <a href="vitae.html">Vitae</a>
         </div>
     </div>
 
@@ -131,6 +132,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
