--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -14,6 +14,7 @@
             <a href="page2.html">MyInterests</a>
             <a href="page3.html">USC</a>
             <a href="portfoliopage.html">Portfolio</a>
+            <a href="vitae.html">Vitae</a>
         </div>
     </div>
 
