--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -30,7 +30,7 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
     <ul>
-        <li><a href="../assignments/01-basic-html/index.html">Assignment1</li>
+        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
     </ul>
 <div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>
 </div>
