--- a/vitae.html
+++ b/vitae.html
@@ -1,5 +1,5 @@
 <html>
-  <head></head>
-  <body></body>
-  <footer></footer>
+  <head><title>Vitae - John S. Strizinger III</title></head>
+  <body>Vitae Ominious Black</body>
+  <footer>&copy2026 Cocky Consulting, Inc</footer>
 </html>
