--- a/vitae.html
+++ b/vitae.html
@@ -1,5 +1,8 @@
 <html>
-  <head><title>Vitae - John S. Strizinger III</title></head>
+  <head>
+    <link rel="stylesheet" href="site.css">    
+    <title>Vitae - John S. Strizinger III</title>
+  </head>
   <body>Vitae Ominious Black</body>
   <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
 </html>
