--- a/vitae.html
+++ b/vitae.html
@@ -1,8 +1,26 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="site.css">    
-    <title>Vitae - John S. Strizinger III</title>
-  </head>
-  <body>Vitae Ominious Black</body>
-  <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
-</html>
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="page1.html">AboutMe</a>
+            <a href="page2.html">MyInterests</a>
+            <a href="page3.html">USC</a>
+            <a href="portfoliopage.html">Portfolio</a>
+            <a href="vitae.html">Vitae</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+<div class="container">    
+<div align="center"><H1>Vitae</H1></div>
+<div align="center">John S. Stritzinger</div>
+<div align="center">Graduate Assistant - University of South Carolina</div>
+<div align="center">1800 Washington Street</div>
+<div align="center">Columbia, South Carolina 29201</div><BR><BR>
+<div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
+</div>
