--- a/vitae.html
+++ b/vitae.html
@@ -1,3 +1,7 @@
+<html>
+<link stylesheet="site.css">
+<head><title>Vitae</title></head>
+<body>
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -24,3 +28,5 @@
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
 </div>
+</body>
+</html>
