--- a/vitae.html
+++ b/vitae.html
@@ -1,5 +1,8 @@
-<html>
-<link stylesheet="site.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="site.css">    
 <head><title>Vitae</title></head>
 <body>
 <div class="topnav">
