--- a/vitae.html
+++ b/vitae.html
@@ -32,4 +32,5 @@
 <div align="center"><span><img src="image6.png" width="400px" height="400px"><img src="image7.png" width="400px" height="400px"></span></div>
 </div>
 </body>
+<footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
 </html>
