--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="page1.html">AboutMe</a>
-            <a href="page2.html">MyInterests</a>
-            <a href="page3.html">USC</a>
+            <a href="about.html">AboutMe</a>
+            <a href="interests.html">MyInterests</a>
+            <a href="usc.html">USC</a>
             <a href="portfoliopage.html">Portfolio</a>
             <a href="vitae.html">Vitae</a>
         </div>
@@ -36,6 +36,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
