--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 <div align="center">John S. Stritzinger</div>
 <div align="center"><span align=center><img src="image1.png" width="500px" height="500px"></span></div>
 </div>
+<table>
+    <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+    <tr><td>About</td><td><a href="about.html"></a></td><td></td></tr>
+    <tr><td>Interests</td><td><a href="interests.html"></a></td><td></td></tr>
+    <tr><td>USCLife</td><td><a href="usc.html"></a></td><td></td></tr>
+    <tr><td>Portfolio</td><td><a href="portfolio.html"></a></td><td></td></tr>
+    <tr><td>Vitae</td><td><a href="vitae.html"></a></td><td></td></tr>
+    <tr><td>Research</td><td><a href="research.html"></a></td><td></td></tr>
+</table>
 </body>
 <footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
