--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage</title>
+<style>
+table
+{
+text-align: center;
+font-size: 11pt;
+color: white;
+background-color: lightblue;
+}
+</style>
 </head>
 <body>
 
