--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@ font-size: 11pt;
 color: white;
 background-color: lightblue;
 }
+tr
+{
+width: 85%;
+height: 25px;
+text-align: center;
+}
+td
+{
+width:125px;
+height: 25px;
+}
 </style>
 </head>
 <body>
@@ -40,7 +51,7 @@ background-color: lightblue;
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
 <div align="center"><span align=center><img src="image1.png" width="500px" height="500px"></span></div>
-</div>
+
 <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html"></a></td><td></td></tr>
@@ -50,6 +61,7 @@ background-color: lightblue;
     <tr><td>Vitae</td><td><a href="vitae.html"></a></td><td></td></tr>
     <tr><td>Research</td><td><a href="research.html"></a></td><td></td></tr>
 </table>
+</div>
 </body>
 <footer><div class="footer">&copy2025&nbspCocky Consulting, Inc</div></footer>
 </html>
