--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ height: 25px;
 <div align="center">
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-    <tr><td>About</td><td><a href="about.html"></a></td><td></td></tr>
-    <tr><td>Interests</td><td><a href="interests.html"></a></td><td></td></tr>
-    <tr><td>USCLife</td><td><a href="usc.html"></a></td><td></td></tr>
-    <tr><td>Portfolio</td><td><a href="portfolio.html"></a></td><td></td></tr>
-    <tr><td>Vitae</td><td><a href="vitae.html"></a></td><td></td></tr>
-    <tr><td>Research</td><td><a href="research.html"></a></td><td></td></tr>
+    <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
+    <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
+    <tr><td>USCLife</td><td><a href="usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+    <tr><td>Portfolio</td><td><a href="portfolio.html">ClassWork</a></td><td>01/15/2026</td></tr>
+    <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+    <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
 </div>
 </div>
