--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@ height: 25px;
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
-<div align="center"><span align=center><img src="image1.png" width="300px" height="300px"></span></div>
-
-<div align="center">
+<HR>
+<div class="row">
+<div class="column1"><div align="center"><span align=center><img src="image1.png" width="300px" height="300px"></span></div></div>
+<div class="column2">
+    <div align="center">
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><HR></tr>
@@ -68,6 +70,8 @@ height: 25px;
     <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
     <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
+</div>
+</div>
 </div>
 </div>
 </body>
