--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ height: 25px;
 <div align="center">John S. Stritzinger</div>
 <HR>
 <div class="row">
-<div class="column1"><div align="center"><span align=center><img src="image1.png" width="300px" height="300px"></span></div></div>
-<div class="column2">
+<div class="column"><div align="center"><span align=center><img src="image1.png" width="300px" height="300px"></span></div></div>
+<div class="column">
     <div align="center">
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
