--- a/index.html
+++ b/index.html
@@ -55,12 +55,19 @@ height: 25px;
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
+<div align="center"><span align=center><img src="image1.png" width="200px" height="200px"></span></div>
 <HR>
 <div class="row">
-<div class="column"><div align="center"><span align=center><img src="image1.png" width="200px" height="200px"></span></div></div>
+<div class="column">
+<ul>
+    <H3>Quick Links</H3>
+    <li><a href="./assignments/01-basic-html/index.html">Assignment One</a></li>    
+</ul>
+</div>
 <div class="column">
     <div align="center">
     <table>
+    <H3>SiteMap</H3>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
     <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
