--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ height: 25px;
 <div class="column">
 <ul>
     <H3>Quick Links</H3>
-    <li><a href="./assignments/01-basic-html/index.html">Assignment One</a></li>    
+    <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
 <div class="column">
