--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ height: 25px;
     </div>
 </div>
 <div class="container">    
-<div align="center"><h1>Home Page</h1></div>
+<div align="center"><h1><img src="homeicon.png"/ width="100px" height="100px">Home Page</h1></div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
