--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ height: 25px;
 <div align="center"><span align=center><img src="image1.png" width="200px" height="200px"></span></div>
 <HR>
 <div class="row">
-<div class="column">
+<div class="column1">
 <ul>
     <H3>Quick Links</H3>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
-<div class="column">
+<div class="column1">
     <div align="center">
     <table>
     <H3>SiteMap</H3>
