--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@ th
 width: 125px;
 height: 25px;
 }
+ul
+{
+height: 350px;
+background-color: lightgreen;
+color: white;
+}
 </style>
 </head>
 <body>
