--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ color: white;
 <div align="center">John S. Stritzinger</div>
 <div align="center"><span align=center><img src="image1.png" width="200px" height="200px"></span></div>
 <HR>
+<div align="center">
 <div class="row">
 <div class="column1">
 <ul>
@@ -82,6 +83,7 @@ color: white;
     <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
     <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
+</div>
 </div>
 </div>
 </div>
