--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage</title>
 <style>
+.tablecontainer
+{
+color: white;
+background-color: lightblue;
+}
 table
 {
 text-align: center;
@@ -67,14 +72,15 @@ color: white;
 <div class="row">
 <div class="column1">
 <ul>
-    <H3>Quick Links</H3>
+    <span align="center"><H3>Quick Links</H3></span>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
 <div class="column1">
     <div align="center">
-    <table>
+    <div class="tablecontainer">
     <H3>SiteMap</H3>
+    <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
     <tr><td>Interests</td><td><a href="interests.html">Interests</a></td><td>01/15/2026</td></tr>
@@ -83,6 +89,7 @@ color: white;
     <tr><td>Vitae</td><td><a href="vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
     <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
+    </div>
 </div>
 </div>
 </div>
