--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ color: white;
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
-<div align="center"><span align=center><img src="image1.png" width="200px" height="200px"></span></div>
 <HR>
 <div align="center">
 <div class="row">
+<div class="column1"><div align="center"><span align=center><img src="image1.png" width="250px" height="250px"></span></div></div>
 <div class="column1">
 <ul>
     <span align="center"><H3>Quick Links</H3></span>
