--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -55,18 +55,20 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-    <ul>
-        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
-    </ul>
+ 
 
 <div class="row">
   <div class="column1" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+    <h2>Social Links</h2>
+       <ul>
+        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
+    </ul>
   </div>
   <div class="column2" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
+    <h2>App Sites</h2>
+        <ul>
+        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
+    </ul>
   </div>
 </div>
 <div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>
