--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 {
 color: white;
 background-color: lightblue;
+border: 2px solid black;
 }
 table
 {
@@ -35,7 +36,6 @@ height: 25px;
 }
 ul
 {
-height: 350px;
 background-color: lightgreen;
 color: white;
 }
