--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ color: white;
 <div class="column1">
     <div class="tablecontainer">
     <div align="center">
-    <H3>SiteMap</H3>
+    <H3>SiteMap</H3><BR><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
