--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ color: white;
     </div>
 </div>
 <div class="container">    
-<div align="center"><img src="homeicon.png" width="40px" height="40px"/>SiteHome</div>
+<div align="center"><h1>SiteHome</h1></div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
 <div align="center">John S. Stritzinger</div>
@@ -76,9 +76,7 @@ color: white;
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
-<div class="column1">
-    <div class="tablecontainer">
-    <div align="center">
+<div class="column1 tablecontainer">
     <H3>SiteMap</H3><BR><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
@@ -90,8 +88,6 @@ color: white;
     <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
     </div>
-</div>
-</div>
 </div>
 </div>
 <HR>
