--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@ ul
 background-color: lightgreen;
 color: white;
 }
+.column1
+{
+width: 33%;
+height: 350px;
+text-align: center;
+}
 </style>
 </head>
 <body>
