--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ text-align: center;
 <div class="column1"><div align="center"><span align=center><img src="image1.png" width="250px" height="250px"></span></div></div>
 <div class="column1">
 <ul>
-    <span align="center"><H3>Quick Links</H3></span>
+    <span align="center"><H3>Quick Links</H3><HR></span>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
 <div class="column1 tablecontainer">
-    <H3>SiteMap</H3><BR><HR>
+    <H3>SiteMap</H3><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
