--- a/interests.html
+++ b/interests.html
@@ -31,7 +31,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><span><img src="image4.png" width="400px" height="400px"><img src="image5.png" width="400px" height="400px"></span></div>    
+<div align="center"><span><figure><img src="image4.png" width="400px" height="400px"><figcaption>Skiing & Outdoors</figcaption></figure><figure><img src="image5.png" width="400px" height="400px"><figcaption>Youth Soccer</figcaption></figure></span></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
