--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ text-align: center;
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
-<div class="column1"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
+<div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
 <div class="column1 tablecontainer">
     <H3>SiteMap</H3><HR>
     <table>
