--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ height: 25px;
 }
 ul
 {
-background-color: lightgreen;
+background-color: pink;
 color: white;
 }
 .column1
@@ -76,13 +76,13 @@ text-align: center;
 <HR>
 <div align="center">
 <div class="row">
-<div class="column1" style="background-color: lightgreen;">
+<div class="column1" style="background-color: pink;">
 <ul>
     <span align="center"><H3>Quick Links</H3><HR></span>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
 </ul>
 </div>
-<div class="column1"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
+<div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
 <div class="column1 tablecontainer">
     <H3>SiteMap</H3><HR>
     <table>
