--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@ ul
 {
 background-color: pink;
 color: white;
+display: block;
+list-style-type: disc; /* Default bullet */
+margin-block-start: 1em;
+margin-block-end: 1em;
+margin-inline-start: 0px;
+margin-inline-end: 0px;
+padding-inline-start: 40px; /* Key: Left padding for indent */    
+}
+li 
+{
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
 .column1
 {
