--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ color: white;
 background-color: lightblue;
 border: 2px solid black;
 text-align: center;
+margin: 0 auto;
 }
 table
 {
@@ -98,7 +99,8 @@ margin: 0 auto;
 </ul>
 </div>
 <div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
-<div class="column1 tablecontainer">
+<div class="column1">
+  <div class="tablecontainer">
     <H3>SiteMap</H3><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
@@ -110,6 +112,7 @@ margin: 0 auto;
     <tr><td>Research</td><td><a href="research.html">Current Research</a></td><td>01/15/2026</td></tr>
     </table>
     </div>
+</div>
 </div>
 </div>
 <HR>
