--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@ margin: 0 auto;
 <div class="column1" style="background-color: pink;">
 <ul>
     <span align="center"><H3>Quick Links</H3><HR></span>
-    <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>    
+    <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
+    <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
+    <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
 </div>
 <div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
