--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 {
 color: white;
 background-color: lightblue;
-border: 2px solid black;
 text-align: center;
 margin: 0 auto;
 }
@@ -19,6 +18,7 @@ text-align: center;
 font-size: 11pt;
 color: white;
 background-color: lightblue;
+margin: 0 auto;
 }
 tr
 {
