--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ padding-inline-start: 40px; /* Key: Left padding for indent */
 }
 li 
 {
+  align: left;
   display: list-item;
   text-align: -webkit-match-parent;
   margin-left: -20px;
