--- a/interests.html
+++ b/interests.html
@@ -4,6 +4,15 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage - My Interests</title>
+<style>
+    figure
+    {
+    width: 380px;
+    height: 380px;
+    text-align: center;
+    }
+</style>
+
 </head>
 <body>
 
@@ -31,7 +40,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><span><figure><img src="image4.png" width="400px" height="400px"><figcaption>Skiing & Outdoors</figcaption></figure><figure><img src="image5.png" width="400px" height="400px"><figcaption>Youth Soccer</figcaption></figure></span></div>    
+<div align="center"><figure><img src="image4.png" width="340px" height="340px"><figcaption>Skiing & Outdoors</figcaption></figure><figure><img src="image5.png" width="340px" height="340px"><figcaption>Youth Soccer</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
