--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ text-align: left;
 <div class="row">
 <div class="column1" style="background-color: pink;">
 <ul>
-    <span align="center"><H3>Quick Links</H3><HR></span>
+    <span align="center" style="align: left;"><H3>Quick Links</H3><HR></span>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
@@ -109,7 +109,7 @@ text-align: left;
 <div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
 <div class="column1">
   <div class="tablecontainer">
-    <H3>SiteMap</H3><HR>
+    <span style="align: left;"><H3>SiteMap</H3></span><HR>
     <table>
     <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
     <tr><td>About</td><td><a href="about.html">About</a></td><td>01/15/2026</td></tr>
