--- a/interests.html
+++ b/interests.html
@@ -11,6 +11,19 @@
     height: 380px;
     text-align: center;
     }
+
+    .image-row 
+    { 
+        display: flex; 
+        justify-content: center; 
+        gap: 20px;
+        text-align: center;
+        margin: 0 auto;
+    } 
+    .image-row figure 
+    { 
+        text-align: center; 
+    }
 </style>
 
 </head>
@@ -40,7 +53,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><figure><img src="image4.png" width="340px" height="340px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="image5.png" width="340px" height="340px"><figcaption>Golf</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="image4.png" width="340px" height="340px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="image5.png" width="340px" height="340px"><figcaption>Golf</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
