--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -59,9 +59,12 @@
 
 <div class="row">
   <div class="column1" style="background-color:#aaa;">
-    <h2>Social Links</h2>
+    <h2>My Webmaster Social Links</h2>
        <ul>
-        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
+        <li><a href="https://www.greenvilleassociates.com">G/A HomePage</li>
+        <li><a href="https://www.glocation.info">GLI HomePage</li>
+        <li><a href="https://www.twitter.com/greenvilleassoc">Twitter</li>
+        <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</li>
     </ul>
   </div>
   <div class="column2" style="background-color:#bbb;">
@@ -71,7 +74,6 @@
     </ul>
   </div>
 </div>
-<div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>
 </div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
