--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -58,7 +58,7 @@
  
 
 <div class="row">
-  <div class="column1" style="background-color:#aaa;">
+  <div class="column1" style="background-color:lightblue;">
     <h2>My Webmaster Social Links</h2>
        <ul>
         <li><a href="https://www.greenvilleassociates.com">G/A HomePage</li>
@@ -67,7 +67,7 @@
         <li><a href="https://facebook.com/greenvilleassociates">@Greenville at Facebook</li>
     </ul>
   </div>
-  <div class="column2" style="background-color:#bbb;">
+  <div class="column2" style="background-color:lightgreen;">
     <h2>App Sites</h2>
         <ul>
         <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
