--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -70,7 +70,7 @@
   <div class="column2" style="background-color:lightgreen; border: 2pt solid black">
     <h2>App Sites</h2>
         <ul>
-        <li><a href="./assignments/01-basic-html/index.html">Assignment1</li>
+        <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
     </ul>
   </div>
 </div>
