--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -74,7 +74,7 @@
     </ul>
   </div>
 </div>
-<div style="width: 100%; height: 300px; background-color: pink;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
+<div style="width: 100%; height: 200px; background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
 </div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
