--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ text-align: left;
 </ul>
 </div>
 <div class="column1" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="290px" height="290px"></span></div></div>
-<div class="column1">
+<div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
     <table>
