--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage - About Me</title>
 </head>
+<style>
+  .image-row 
+    { 
+        display: flex; 
+        justify-content: center; 
+        gap: 20px;
+        text-align: center;
+        margin: 0 auto;
+    } 
+    .image-row figure 
+    { 
+        text-align: center; 
+    }
+</style>
 <body>
 
 <div class="topnav">
@@ -36,6 +50,7 @@
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
