--- a/usc.html
+++ b/usc.html
@@ -4,6 +4,20 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
 <title>USC242 HomePage - USC Activities</title>
+    <style>
+  .image-row 
+    { 
+        display: flex; 
+        justify-content: center; 
+        gap: 20px;
+        text-align: center;
+        margin: 0 auto;
+    } 
+    .image-row figure 
+    { 
+        text-align: center; 
+    }
+</style>
 </head>
 <body>
 
