--- a/about.html
+++ b/about.html
@@ -45,11 +45,12 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div align="center"><span align="center"><img src="image2.png" width="400px" height="400px"><img src="image3.png" width="400px" height="400px"></span></div>        
+<div class="image-row" align="center"><figure><img src="image2.png" width="440px" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="image3.png" width="440px" height="440px"><figcaption>Golf</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
