--- a/242index.html
+++ b/242index.html
@@ -95,7 +95,7 @@ line-height: calc(1em + 2px);
     </div>
 </div>
 <div class="container">    
-<div align="center"><h1>SiteHome</h1></div>
+<div align="center"><h1>242 SiteHome</h1></div>
 <div align="center">John S. Stritzinger</div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
